[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Anniversary.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/back.png" type="Texture" id=3]
[ext_resource path="res://assets/obstacle.png" type="Texture" id=4]
[ext_resource path="res://assets/ground.png" type="Texture" id=5]
[ext_resource path="res://assets/flyer.png" type="Texture" id=8]
[ext_resource path="res://scripts/playerai2.gd" type="Script" id=10]
[ext_resource path="res://scripts/background2.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 680.801, 69.22 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 119.397, 119.959 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.4, 1 )
colors = PoolColorArray( 1, 0.984375, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=25]
curve = SubResource( 24 )

[sub_resource type="ParticlesMaterial" id=15]
trail_size_modifier = SubResource( 25 )
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 20.0
gravity = Vector3( 98, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
damping_random = 0.5
scale = 2.5
color_ramp = SubResource( 12 )

[sub_resource type="DynamicFont" id=28]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="StyleBoxEmpty" id=32]

[sub_resource type="StyleBoxEmpty" id=33]

[sub_resource type="DynamicFont" id=34]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=35]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=36]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="ground" type="StaticBody2D" parent="background"]
position = Vector2( 0, 4180.15 )
scale = Vector2( 5, 50 )
z_index = 15
collision_layer = 4
collision_mask = 5

[node name="ground" type="Sprite" parent="background/ground"]
scale = Vector2( 5.64315, 0.576693 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/ground"]
position = Vector2( 0, 0.017 )
shape = SubResource( 26 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="background/ground"]
position = Vector2( 5.2, -152.823 )
shape = SubResource( 26 )

[node name="ceiling" type="Sprite" parent="background/ground"]
position = Vector2( 94, -203.603 )
scale = Vector2( 8.34417, 1 )
texture = ExtResource( 5 )

[node name="ceiling_pos" type="Position2D" parent="background/ground/ceiling"]
position = Vector2( -6.136, 120 )

[node name="obstacle2" type="Sprite" parent="background"]
modulate = Color( 0.721569, 0.172549, 0.172549, 1 )
position = Vector2( -7409, -709 )
scale = Vector2( 20.0639, 1.19381 )
z_index = -4
texture = ExtResource( 4 )

[node name="Player" type="KinematicBody2D" parent="background"]
position = Vector2( 152.962, 364 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="background/Player"]
texture = ExtResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="background/Player"]
shape = SubResource( 27 )

[node name="Flying" type="Particles2D" parent="background/Player"]
position = Vector2( -120, 0 )
scale = Vector2( 10, 10 )
emitting = false
amount = 80
local_coords = false
process_material = SubResource( 15 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -290.0
margin_right = -70.0
margin_bottom = 290.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1147.0
margin_bottom = 580.0

[node name="Upper" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1147.0
margin_bottom = 130.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer/Upper"]
margin_right = 130.0
margin_bottom = 130.0
rect_min_size = Vector2( 130, 130 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="HSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Upper"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 134.0
margin_right = 184.0
margin_bottom = 130.0
rect_min_size = Vector2( 50, 0 )

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer/Upper"]
margin_left = 188.0
margin_top = 1.0
margin_right = 719.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 28 )
text = "SETTINGS"
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 1147.0
margin_bottom = 480.0
mouse_filter = 1

[node name="Lower" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 1147.0
margin_bottom = 346.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/Lower"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1147.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )

[node name="1st Set" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/Lower"]
margin_top = 134.0
margin_right = 1147.0
margin_bottom = 206.0
alignment = 1

[node name="Sounds" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/Lower/1st Set"]
margin_left = 171.0
margin_right = 459.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 30 )
custom_styles/focus = SubResource( 31 )
custom_styles/disabled = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
custom_fonts/font = SubResource( 34 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Sounds"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/Lower/1st Set"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 463.0
margin_right = 743.0
margin_bottom = 72.0
rect_min_size = Vector2( 280, 0 )
size_flags_horizontal = 5

[node name="Music" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/Lower/1st Set"]
margin_left = 747.0
margin_right = 975.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 30 )
custom_styles/focus = SubResource( 31 )
custom_styles/disabled = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
custom_fonts/font = SubResource( 35 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Music"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/Lower"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 210.0
margin_right = 1147.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 60 )

[node name="2nd Set" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/Lower"]
margin_top = 274.0
margin_right = 1147.0
margin_bottom = 346.0
alignment = 1

[node name="Guide" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/Lower/2nd Set"]
margin_right = 498.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 30 )
custom_styles/focus = SubResource( 31 )
custom_styles/disabled = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
custom_fonts/font = SubResource( 35 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Button Guide"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/Lower/2nd Set"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 502.0
margin_right = 602.0
margin_bottom = 72.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 5

[node name="Graphics" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/Lower/2nd Set"]
margin_left = 606.0
margin_right = 1147.0
margin_bottom = 72.0
rect_min_size = Vector2( 541, 0 )
custom_styles/hover = SubResource( 29 )
custom_styles/pressed = SubResource( 30 )
custom_styles/focus = SubResource( 31 )
custom_styles/disabled = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
custom_fonts/font = SubResource( 35 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Fancy Graphics"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 36 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/Upper/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Lower/1st Set/Sounds" to="." method="_on_Sounds_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Lower/1st Set/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Lower/2nd Set/Guide" to="." method="_on_Button_Guide_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/Lower/2nd Set/Graphics" to="." method="_on_Graphics_pressed"]
